[tool.poetry]
name = "indrargos"
version = "0.1.0"
description = ""
authors = ["juleshenry <julianhenry713@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
surrealdb = "^0.3.2"
langchain = "^0.2.14"
langchain-community = "^0.2.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
